minikube/qa-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qa-ui-service
  namespace: qa
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: qa-ui
