minikube/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: qa
spec:
  type: LoadBalancer
  ports:
    - port: 7788
      targetPort: 7788
      protocol: TCP
  selector:
    app: websocket
